fix: mobile extra white space

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
+body {
+  overflow: hidden;
+  margin: 0;
+}
 #root {
     font-family: Raster, monospace;
     background-color: black;
-    height: 100dvh;
 }
 
 .header {
